# vcf_color_service

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
scripts/: generate_fallbacks.py  vcf_color_extractor.py  vcf_validate_layers.py
scripts/color_extraction_output/: aci_statistics_full.json  aci_statistics_report.md  aci_statistics_summary.csv  config_generated.json
vcf_color_service/: __init__.py  config.json  core.py
vcf_color_service/tests/: test_core.py
