[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vcf_color_service"
version = "2.0.0"
description = "Single source of truth for ACI color mapping across VCF/CNC projects"
authors = [{name = "SYSTEQ"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["vcf", "aci", "color-mapping", "cnc", "reverse-engineering"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vcf_color_service*"]

[tool.pytest.ini_options]
testpaths = ["vcf_color_service/tests"]